data/derived/comb/progs/unify/prog1668.ml.out
Characters 441-444:
  2.0 *.exp -(
        ^^^
Error: This expression has type float -> float
       but an expression was expected of type float
